--- a/index.html
+++ b/index.html
@@ -163,28 +163,10 @@
           </div>
         </div>
         <p>Stake to our node before March 31st 2021 and get reimbursed for any slashing.<br>Conditions apply* </p>
-          <form action=”mailto:contact@yourdomain.com”
-
-
-method=”POST”
-
-
-enctype=”multipart/form-data”
-
-
-name=”EmailForm”>
-
-
-Name:<br>
-
-
-<input type=”text” size=”19″ name=”ContactName”><br><br>
-
-
-Message:<br> <textarea name=”ContactCommentt” rows=”6″ cols=”20″>
-
-
-</textarea><br><br> <input type=”submit” value=”Submit”> </form>
+          <form action="https://formspree.io/f/xzbkngez" method="POST">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
+</form>
       </div>
     </div>
   </div>
