--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <h3>Register by entering your email below. </h3>
         <div class="form-block w-form">
           
-            <form action="https://formspree.io/f/xzbkngez" method="POST">
+            <form action="https://formspree.io/f/xzbkngez" method="POST" class="subscribe-form-flex">
             <input type="email" name="_replyto" class="subscribe-form-input w-input">
             <input type="submit" value="Send" class="submit-button w-button">
             </form>
