--- a/index.html
+++ b/index.html
@@ -152,14 +152,10 @@
         <div class="subheading">Ready to stake?</div>
         <h3>Register by entering your email below. </h3>
         <div class="form-block w-form">
-          
             <form action="https://formspree.io/f/xzbkngez" method="POST" class="subscribe-form-flex">
-            <input type="email" name="_replyto" class="subscribe-form-input w-input">
+            <input type="email" name="_replyto" class="subscribe-form-input w-input" placeholder="johndoe@gmail.com">
             <input type="submit" value="Send" class="submit-button w-button">
             </form>
-            <form id="email-form" name="email-form" data-name="Email Form" class="subscribe-form-flex">
-            <div class="subscribe-form-input-wrapper"><input type="email" class="subscribe-form-input w-input" maxlength="256" name="Subscriber-Email" data-name="Subscriber Email" placeholder="johndoe@gmail.com" id="Subscriber-Email" required=""></div><input type="submit" value="Register" data-wait="Please wait..." class="submit-button w-button">
-          </form>
           <div class="w-form-done">
             <div>Thank you! Your submission has been received!</div>
           </div>
