--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div>Oops! Something went wrong while submitting the form.</div>
           </div>
         </div>
-        <p>Stake to our node before March 31st 2021 and get reimbursed for any slashing.<br>Conditions apply* </p>
+        <p>Stake to our node before March 31st 2021 and get reimbursed for any possible slashing.<br>Conditions apply* </p>
           
       </div>
     </div>
