--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-wf-page="60462747bc5a3efe1655b22f" data-wf-site="60462746bc5a3edd8a55b221">
 <head>
   <meta charset="utf-8">
-  <title>Safia | Webflow Landing Template (Freebie)</title>
+  <title>Cro's Nest | Stake your CRO on the Mainnet</title>
   <meta content="Flowbase is the largest collection of webflow templates, assets and guides. Visit our website via flowbase.co and keep up with the latest in Webflow." name="description">
   <meta content="Safia | Webflow Landing Template (Freebie)" property="og:title">
   <meta content="Flowbase is the largest collection of webflow templates, assets and guides. Visit our website via flowbase.co and keep up with the latest in Webflow." property="og:description">
