--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Cro's Nest | Stake your CRO on the Mainnet</title>
-  <meta content="Flowbase is the largest collection of webflow templates, assets and guides. Visit our website via flowbase.co and keep up with the latest in Webflow." name="description">
-  <meta content="Safia | Webflow Landing Template (Freebie)" property="og:title">
+  <meta content="Stake your CRO on the Mainnet" name="description">
+  <meta content="Cro's Nest | Stake your CRO on the Mainnet" property="og:title">
   <meta content="Flowbase is the largest collection of webflow templates, assets and guides. Visit our website via flowbase.co and keep up with the latest in Webflow." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/5f6c746f870a5d100b08017c/5f6e98cde6e74b186a8dbd1a_Open%20Graph%20Large.png" property="og:image">
-  <meta content="Safia | Webflow Landing Template (Freebie)" property="twitter:title">
+  <meta content="Cro's Nest | Stake your CRO on the Mainnet" property="twitter:title">
   <meta content="Flowbase is the largest collection of webflow templates, assets and guides. Visit our website via flowbase.co and keep up with the latest in Webflow." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/5f6c746f870a5d100b08017c/5f6e98cde6e74b186a8dbd1a_Open%20Graph%20Large.png" property="twitter:image">
   <meta property="og:type" content="website">
