--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div id="Content" class="container">
       <div data-w-id="a5b51e7e-26b9-a102-0989-87425c771420" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title-wrap-centre-who">
         <h1>Our expertise</h1>
-        <p class="paragraph-large">We provide the combined expertise of <em>five</em> of the <em>top contributors</em> to the <strong>Crypto.com Main-Net Dry Run</strong> competition and <strong>Croeseid Test-Net</strong> in operating a world-class, distributed, and redundant validator node for the <strong>Crypto.com CRO Blockchain</strong>. Not only do we push the network forward proposing, verifying, and signing transaction blocks as often as every few seconds: we do so provide all CRO holders the opportunity to stake alongside us, accessing the chain’s staggering 20% APY rewards.</p>
+        <p class="paragraph-large">We provide the combined expertise of <em>five</em> of the <em>top contributors</em> to the <strong>Crypto.com Main-Net Dry Run</strong> competition and <strong>Croeseid Test-Net</strong> in operating a world-class, distributed, and redundant validator node for the <strong>Crypto.com CRO Blockchain</strong>. Not only do we push the network forward proposing, verifying, and signing transaction blocks as often as every few seconds; we also provide all CRO holders the opportunity to stake alongside us, accessing the chain’s staggering 20% APY rewards.</p>
       </div>
     </div>
   </div>
@@ -129,7 +129,7 @@
       <div data-w-id="8ab7a4d3-42ab-df44-1b7f-3a42890a3a67" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid feature-grid">
         <a href="#" class="feature-card w-inline-block"><img src="images/Icon-Stats.svg" loading="lazy" alt="" class="icon">
           <h4>Uptime</h4>
-          <p>Near-perfect uptime  (90%+ of all block signed).</p>
+          <p>Near-perfect uptime  (97%+ of all block signed).</p>
         </a>
         <a href="#" class="feature-card w-inline-block"><img src="images/Icon-Tailored.svg" loading="lazy" alt="" class="icon">
           <h4>Secure</h4>
@@ -137,7 +137,7 @@
         </a>
         <a href="#" class="feature-card w-inline-block"><img src="images/Icon-Comment.svg" loading="lazy" alt="" class="icon">
           <h4>Transparent</h4>
-          <p>We will never ask you for money (be it FIAT or crypto). Our commission rates are public and will be our source of income.</p>
+          <p>Our commission rates are public and will be our source of income.</p>
         </a>
         <a href="#" class="feature-card w-inline-block"><img src="images/Icon-Dashboard.svg" loading="lazy" alt="" class="icon">
           <h4>You&#x27;re in control</h4>
@@ -214,7 +214,7 @@
     </div>
     <div class="container">
       <div class="footer-wrap-2">
-        <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.com Blockchain. We are neither affiliated nor endorsed by Crypto.com, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum of 5.000 CRO to our node on or before the last block fewer than 168 hours after mainnet launch will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements. In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. All benefits are permanently lost when the user withdraws their stake.<br></div>
+        <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.com Blockchain. We are not affiliated to Crypto.com, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum of 5.000 CRO to our node on or before March 31st 2021 will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements. In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. All benefits are permanently lost when the user withdraws their stake.<br></div>
       </div>
     </div>
   </div>
