--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div data-w-id="8ab7a4d3-42ab-df44-1b7f-3a42890a3a67" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid feature-grid">
         <a href="#" class="feature-card w-inline-block"><img src="images/Icon-Stats.svg" loading="lazy" alt="" class="icon">
           <h4>Uptime</h4>
-          <p>Near-perfect uptime  (97%+ of all block signed).</p>
+          <p>Near-perfect uptime (we aim for 97%+ of all block signed).</p>
         </a>
         <a href="#" class="feature-card w-inline-block"><img src="images/Icon-Tailored.svg" loading="lazy" alt="" class="icon">
           <h4>Secure</h4>
