--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
         </div>
         <a href="#" class="text-link">2021 All right reserved</a>
         <div class="link-wrap">
-          <a href="#" class="text-link-legal">Terms &amp; Conditions</a>
-          <a href="#" class="text-link-legal">Privacy Policy</a>
+          <a href="privacy.html" class="text-link-legal">Privacy Policy</a>
         </div>
       </div>
     </div>
@@ -223,7 +222,7 @@
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script>
 (function () {
-    var deadline = '2021/03/25 00:00';
+    var deadline = '2021/03/25 02:00';
     function pad(num, size) {
         var s = "0" + num;
         return s.substr(s.length - size);
