--- a/index.html
+++ b/index.html
@@ -196,7 +196,61 @@
       </div>
     </div>
   </div>
-  <div class="footer">
+  <div class="section-faq">
+    <div class="content-wrapper slim w-container">
+      <div class="header-center-box _75">
+        <h2 class="heading">FAQ<br></h2>
+      </div>
+      <div class="accordion-wrapper">
+        <div class="accordion-item">
+          <div id="q1" class="accordion-item-trigger">
+            <h4 class="accordion-heading"><strong>Are you running your validator node from your home?</strong></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>No! Several operators on this and other networks feel like they can operate a functional node at home, through a residential connection on a home PC, perhaps even a laptop.<br>We do not have any portion of our infrastructure on domestic systems.<br></p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div id="q2" class="accordion-item-trigger">
+            <h4 class="accordion-heading"><strong>Why not operate from your home?<br></strong></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>Home computers and home internet connections have evolved massively in the last few years, and adoption has soared. This is great, but it also means traffic is—much like for cars on a busy highway—very congested and prone to accidents. It’s common for a home connection to drop for a few seconds, or even become unavailable for a few hours. This, alone, would lead to a failed validator. A single power outage, a broken component, even an innocuous everyday accident might cause a home-based solution to become unavailable, leading to jail time, lost signatures, and a slashed capital.<br></p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div id="q3" class="accordion-item-trigger">
+            <h4 class="accordion-heading"><strong>Where do you operate from?</strong></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>We have deployed our infrastructure around the world. A core network of dedicated servers, each hosted at a different premium datacenter, is always supported by a second layer of dynamically and statically provisioned VPS hosts with over 30 dedicated public IPs available.<br>It may sound like a lot, but in our experience, it&#x27;s what it takes to weather the stormy turbulence of a successful blockchain. You could sign 100% of the blocks using a Raspberry Pi connected to a rural DSL, until transactions start mounting up. If there is congestion, forget to even try.With months of combined experience running several test validators on all available testnet environments, including the Crossfire resilience challenge.</p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div id="q4" class="accordion-item-trigger">
+            <h4 class="accordion-heading">What if something breaks down?<br></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>Each component of the validator network is redundant. No single point of failure exists. The worst-case scenario, where the actual validation server becomes unavailable, signing would only be stopped for a few minutes ensuring no possibility of double signing might take place. A fully redundant, ready-to-go validation node hosted in a separate location takes over until the main server is deemed operational.<br></p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div id="q5" class="accordion-item-trigger">
+            <h4 class="accordion-heading">How are you alerted, should any failure occur?<br></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>We have put in place a tiered alert system which will notify us of any system instability or failure directly. Should we start missing blocks, we would be wakened up by our phones ringing, error report, and coffee in toe. <br></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="footer">
     <div class="container">
       <div class="footer-wrap">
         <div class="social-wrap">
