--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 <body>
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
     <div class="container-navigation">
-      <a href="#" class="brand w-nav-brand"><img src="images/logo-nest.png" loading="lazy" width="114" alt=""></a>
-      <nav role="navigation" class="w-nav-menu">
+      <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/logo-nest.png" loading="lazy" width="114" alt=""></a>
+      <nav role="navigation" class="nav-menu-2 w-nav-menu">
         <a href="#Expertise" class="nav-link w-nav-link">Our Expertise</a>
         <a href="#Promise" class="nav-link-2 w-nav-link">Our Promise</a>
         <a href="#CTA" class="nav-link-3 w-nav-link">Register</a>
-        <a href="mailto:chainmaster@cros-nest.com?subject=I%20want%20to%20delegate%20on%20Cro&#x27;s%20Nest%20" class="nav-link-4 w-nav-link">Contact</a>
+        <a href="#faq" class="nav-link-4 w-nav-link">FAQ</a>
+        <a href="mailto:chainmaster@cros-nest.com?subject=I%20want%20to%20delegate%20on%20Cro&#x27;s%20Nest%20" class="nav-link-5 w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
