--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Mar 14 2021 14:29:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Mar 14 2021 15:21:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="604e1cb184f8f8dc2930aa0c" data-wf-site="60462746bc5a3edd8a55b221">
 <head>
   <meta charset="utf-8">
@@ -28,11 +28,8 @@
 <body>
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
     <div class="container-navigation">
-      <a href="#" class="brand w-nav-brand"><img src="images/logo-nest.png" loading="lazy" width="114" alt=""></a>
+      <a href="index.html" class="brand w-nav-brand"><img src="images/logo-nest.png" loading="lazy" width="114" alt=""></a>
       <nav role="navigation" class="nav-menu-2 w-nav-menu">
-        <a href="#" class="nav-link w-nav-link">Our Expertise</a>
-        <a href="#" class="nav-link-2 w-nav-link">Our Promise</a>
-        <a href="#" class="nav-link-3 w-nav-link">Register</a>
         <a href="mailto:chainmaster@cros-nest.com?subject=I%20want%20to%20delegate%20on%20Cro&#x27;s%20Nest%20" class="nav-link-4 w-nav-link">Contact</a>
       </nav>
       <div class="menu-button w-nav-button">
