--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       </div>
     </div>
   </div>
-  <div class="section-faq">
+  <div id="faq" class="section-faq">
     <div class="content-wrapper slim w-container">
       <div class="header-center-box _75">
         <h2 class="heading">FAQ<br></h2>
