--- a/privacy.html
+++ b/privacy.html
@@ -92,8 +92,7 @@
         </div>
         <a href="#" class="text-link">2021 All right reserved</a>
         <div class="link-wrap">
-          <a href="#" class="text-link-legal">Terms &amp; Conditions</a>
-          <a href="#" class="text-link-legal">Privacy Policy</a>
+          <a href="privacy.html" class="text-link-legal">Privacy Policy</a>
         </div>
       </div>
     </div>
