--- a/index.html
+++ b/index.html
@@ -153,36 +153,37 @@
       <div data-w-id="3372c3b5-a214-570f-280d-1c66bca69d43" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="cta-block">
         <div class="subheading">Ready to stake?</div>
         <h3>Register by entering your email below. </h3>
-        <!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="https://cros-nest.us1.list-manage.com/subscribe/post?u=516d2271f04813f220a550416&amp;id=dcdc0f7f46" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	
-<div class="mc-field-group" style="margin-top:30px">
-	<label for="mce-EMAIL">Email Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div id="mergeRow-gdpr" style="margin-top:30px" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
-    <div class="content__gdpr">
-        <label>Marketing Permissions</label>
-        <p>Please select all the ways you would like to hear from us:</p>
-        <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-		<label class="checkbox subfield" for="gdpr_42974"><input type="checkbox" id="gdpr_42974" name="gdpr[42974]" value="Y" class="av-checkbox "><span>Email</span> </label><label class="checkbox subfield" for="gdpr_42982"><input type="checkbox" id="gdpr_42982" name="gdpr[42982]" value="Y" class="av-checkbox "><span>Customized Online Advertising</span> </label>
-        </fieldset>
-        <p style="margin-top:30px">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit <a href="/privacy" target="_blank">this page.</a></p>
-    </div>
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_516d2271f04813f220a550416_dcdc0f7f46" tabindex="-1" value=""></div>
-    <div class="clear" style="margin-top:30px"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="submit-button w-button"></div>
-    </div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
+    <div class="html-embed w-embed">
+          <!--  Begin Mailchimp Signup Form  -->
+          <div id="mc_embed_signup">
+            <form action="https://cros-nest.us1.list-manage.com/subscribe/post?u=516d2271f04813f220a550416&amp;id=dcdc0f7f46" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+              <div id="mc_embed_signup_scroll">
+                <div class="mc-field-group" style="margin-top:30px">
+                  <label for="mce-EMAIL">Email Address </label>
+                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+                <div id="mergeRow-gdpr" style="margin-top:30px" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
+                  <div class="content__gdpr">
+                    <label>Marketing Permissions</label>
+                    <p>Please select all the ways you would like to hear from us:</p>
+                    <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
+                      <label class="checkbox subfield" for="gdpr_42974"><input type="checkbox" id="gdpr_42974" name="gdpr[42974]" value="Y" class="av-checkbox "><span>Email</span> </label><label class="checkbox subfield" for="gdpr_42982"><input type="checkbox" id="gdpr_42982" name="gdpr[42982]" value="Y" class="av-checkbox "><span>Customized Online Advertising</span> </label>
+                    </fieldset>
+                    <p style="margin-top:30px">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit <a href="privacy.html" target="_blank">this page.</a>
+                    </p>
+                  </div>
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div> <!--  real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_516d2271f04813f220a550416_dcdc0f7f46" tabindex="-1" value=""></div>
+                <div class="clear" style="margin-top:30px"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="submit-button w-button"></div>
+              </div>
+            </form>
+          </div>
+          <!-- End mc_embed_signup -->
+        </div>
         <p>Stake to our node before March 31st 2021 and get reimbursed for any possible slashing.<br>Conditions apply* </p>
           
       </div>
