--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
                       <label class="checkbox subfield" for="gdpr_42974"><input type="checkbox" id="gdpr_42974" name="gdpr[42974]" value="Y" class="av-checkbox "><span>Email</span> </label><label class="checkbox subfield" for="gdpr_42982"><input type="checkbox" id="gdpr_42982" name="gdpr[42982]" value="Y" class="av-checkbox "><span>Customized Online Advertising</span> </label>
                     </fieldset>
-                    <p style="margin-top:30px">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit <a href="privacy.html" target="_blank">this page.</a>
+                    <p style="margin-top:30px">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit <a href="privacy.html" target="_blank" style="color: #ccd2e9;">this page.</a>
                     </p>
                   </div>
                 </div>
