--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta content="Stake your CRO on the Mainnet" name="description">
   <meta content="Cro's Nest | Stake your CRO on the Mainnet" property="og:title">
   <meta content="" property="og:description">
-  <meta content="images/preview.png" property="og:image">
+  <meta content="https://cros-nest.com/images/preview.png" property="og:image">
   <meta content="Cro's Nest | Stake your CRO on the Mainnet" property="twitter:title">
   <meta content="" property="twitter:description">
-  <meta content="images/preview.png" property="twitter:image">
+  <meta content="https://cros-nest.com/images/preview.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
