--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           </div>
           <!-- End mc_embed_signup -->
         </div>
-        <p>Stake to our node on or before March 31st 2021 and get reimbursed for any possible slashing.<br>Conditions apply* </p>
+        <p class="paragraph-2">Stake to our node before March 31st 2021 and get reimbursed for any slashing.<br>Conditions apply* </p>
           
       </div>
     </div>
