--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/516d2271f04813f220a550416/cb4fd84725fb75a6a8c1e8bf3.js");</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GYEW4BRMSQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GYEW4BRMSQ');
+</script>
 </head>
 <body>
   <div data-collapse="small" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
