--- a/index.html
+++ b/index.html
@@ -250,20 +250,6 @@
           <div class="accordion-item-content">
             <p>Absolutely not. You’ve probably heard the adage: “not your keys, not your coins. Never has this been truer than today, with so many services and exchanges taking custody of your coin in exchange of their services and, sometimes, small interests. Truth is that all that coin is out of your control. If the company disappears, a wallet is hacked, a password lost, so is your coin. When delegating (staking) your capital to a validator node, you are “lending your staking power” to the node, which locks your coin (you may not use it to trade until you have disengaged your coin and waited a 21-day cool-down period). The coin never leaves your wallet and can never be acted upon other than by your own private keys.<br></p>
           </div>
-        </div> 
-        <div class="accordion-item">
-          <div id="q1" class="accordion-item-trigger">
-            <h4 class="accordion-heading"><strong>It’s completely risk-free money!</strong></h4>
-            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
-          </div>
-          <div class="accordion-item-content">
-            <p>There is a lot less risk than in many other endeavors, however it is essential that you are aware of the risks that DO exist when staking on the Crypto.com network. There are four major risks associated with staking:
-a.	You are locking up your capital: You will have to wait the unbonding period before you will be able to transfer, trade, or dispose of your coin. This will reduce your ability to react to sudden shifts in the market or in personal conditions. The exchange value of your coin at the start of a stake may be vastly different than at the end.
-b.	You may choose an inactive validator: On the Crypto.com network only the top 100 validators will be considered active and receive rewards. This means that anyone delegating to validators deemed inactive will be locking their coin in exchange of no rewards but all the same risks. Fortunately, there is no cost and no delay to moving your stake from a node to another, active node.
-c.	Slashing: Slashing is the more common and less painful punishment for misbehaving or poorly managed validators. When a validator fails to sign over 999 blocks over the last 2000, its role as validator is suspended for one hour (or more if the operator isn’t attentive). When this happens, all staked capital is “slashed” (reduced) by 0.1%, and no blocks will be signed and rewarded during jail time.
-d.	Tombstoning: This is the worst possible scenario; you have staked your money to a node that has become compromised or misconfigured to an extent that it caused a fatal error. That validator key has been revoked and all capital is slashed by 5% and is final. Again, you always retain full control of your coin and may move it to any other node.
-Choosing a well-managed, enterprise-grade service provider will mitigate all the above. Please refer to https://www.crypto.org for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
-          </div>
         </div>  
         <div class="accordion-item">
           <div id="q1" class="accordion-item-trigger">
@@ -319,6 +305,20 @@ Choosing a well-managed, enterprise-grade service provider will mitigate all the
             <p>We have put in place a tiered alert system which will notify us of any system instability or failure directly. Should we start missing blocks, we would be wakened up by our phones ringing, error report, and coffee in toe. <br></p>
           </div>
         </div>
+        <div class="accordion-item">
+          <div id="q1" class="accordion-item-trigger">
+            <h4 class="accordion-heading"><strong>Is this completely risk-free money?</strong></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>There is a lot less risk than in many other endeavors, however it is essential that you are aware of the risks that DO exist when staking on the Crypto.com network. There are four major risks associated with staking:
+<br>a.	You are locking up your capital: You will have to wait the unbonding period before you will be able to transfer, trade, or dispose of your coin. This will reduce your ability to react to sudden shifts in the market or in personal conditions. The exchange value of your coin at the start of a stake may be vastly different than at the end.
+<br>b.	You may choose an inactive validator: On the Crypto.com network only the top 100 validators will be considered active and receive rewards. This means that anyone delegating to validators deemed inactive will be locking their coin in exchange of no rewards but all the same risks. Fortunately, there is no cost and no delay to moving your stake from a node to another, active node.
+<br>c.	Slashing: Slashing is the more common and less painful punishment for misbehaving or poorly managed validators. When a validator fails to sign over 999 blocks over the last 2000, its role as validator is suspended for one hour (or more if the operator isn’t attentive). When this happens, all staked capital is “slashed” (reduced) by 0.1%, and no blocks will be signed and rewarded during jail time.
+<br>d.	Tombstoning: This is the worst possible scenario; you have staked your money to a node that has become compromised or misconfigured to an extent that it caused a fatal error. That validator key has been revoked and all capital is slashed by 5% and is final. Again, you always retain full control of your coin and may move it to any other node.
+Choosing a well-managed, enterprise-grade service provider will mitigate all the above. Please refer to https://www.crypto.org for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
+          </div>
+        </div>   
       </div>
     </div>
   </div>
