--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Choosing a well-managed, enterprise-grade service provider will mitigate all the
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script>
 (function () {
-    var deadline = '2021/03/25 02:00';
+    var deadline = '2021/03/25 02:00 GMT+0100';
     function pad(num, size) {
         var s = "0" + num;
         return s.substr(s.length - size);
