--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div id="Content" class="container">
       <div data-w-id="a5b51e7e-26b9-a102-0989-87425c771420" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="title-wrap-centre-who">
         <h1>Our expertise</h1>
-        <p class="paragraph-large">We provide the combined expertise of <em>five</em> of the <em>top contributors</em> to the <strong>Crypto.com Main-Net Dry Run</strong> competition and <strong>Croeseid Test-Net</strong> in operating a world-class, distributed, and redundant validator node for the <strong>Crypto.com CRO Blockchain</strong>. Not only do we push the network forward proposing, verifying, and signing transaction blocks as often as every few seconds; we also provide all CRO holders the opportunity to stake alongside us, accessing the chain’s staggering 20% APY rewards.</p>
+        <p class="paragraph-large">We provide the combined expertise of <em>five</em> of the <em>top contributors</em> to the <strong>Crypto.org Main-Net Dry Run</strong> competition and <strong>Croeseid Test-Net</strong> in operating a world-class, distributed, and redundant validator node for the <strong>Crypto.org CRO Blockchain</strong>. Not only do we push the network forward proposing, verifying, and signing transaction blocks as often as every few seconds; we also provide all CRO holders the opportunity to stake alongside us, accessing the chain’s staggering 20% APY rewards.</p>
       </div>
     </div>
   </div>
@@ -234,11 +234,11 @@
       <div class="accordion-wrapper">
         <div class="accordion-item">
           <div id="q1" class="accordion-item-trigger">
-            <h4 class="accordion-heading"><strong>What is the Crypto.com blockchain and what is staking?</strong></h4>
+            <h4 class="accordion-heading"><strong>What is the Crypto.org blockchain and what is staking?</strong></h4>
             <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
           </div>
           <div class="accordion-item-content">
-            <p>In summary, the Crypto.com Blockchain is the peer-to-peer distributed ledger network on which the CRO coin exists and operates. To stake some amount of your own CRO means you lock your coin up and commit it to support an existing network validator node. These nodes are the building blocks of the network itself. In exchange for this lock-up, if the validator you have chosen is active and operational you will accrue rewards (roughly 20%APY minus commissions expected on a 100% operational node) in CRO.
+            <p>In summary, the Crypto.org Blockchain is the peer-to-peer distributed ledger network on which the CRO coin exists and operates. To stake some amount of your own CRO means you lock your coin up and commit it to support an existing network validator node. These nodes are the building blocks of the network itself. In exchange for this lock-up, if the validator you have chosen is active and operational you will accrue rewards (roughly 20%APY minus commissions expected on a 100% operational node) in CRO.
             Please refer to https://www.crypto.org for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
           </div>
         </div>
@@ -311,9 +311,9 @@
             <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
           </div>
           <div class="accordion-item-content">
-            <p>There is a lot less risk than in many other endeavors, however it is essential that you are aware of the risks that DO exist when staking on the Crypto.com network. There are four major risks associated with staking:
+            <p>There is a lot less risk than in many other endeavors, however it is essential that you are aware of the risks that DO exist when staking on the Crypto.org network. There are four major risks associated with staking:
 <br>a.	You are locking up your capital: You will have to wait the unbonding period before you will be able to transfer, trade, or dispose of your coin. This will reduce your ability to react to sudden shifts in the market or in personal conditions. The exchange value of your coin at the start of a stake may be vastly different than at the end.
-<br>b.	You may choose an inactive validator: On the Crypto.com network only the top 100 validators will be considered active and receive rewards. This means that anyone delegating to validators deemed inactive will be locking their coin in exchange of no rewards but all the same risks. Fortunately, there is no cost and no delay to moving your stake from a node to another, active node.
+<br>b.	You may choose an inactive validator: On the Crypto.org network only the top 100 validators will be considered active and receive rewards. This means that anyone delegating to validators deemed inactive will be locking their coin in exchange of no rewards but all the same risks. Fortunately, there is no cost and no delay to moving your stake from a node to another, active node.
 <br>c.	Slashing: Slashing is the more common and less painful punishment for misbehaving or poorly managed validators. When a validator fails to sign over 999 blocks over the last 2000, its role as validator is suspended for one hour (or more if the operator isn’t attentive). When this happens, all staked capital is “slashed” (reduced) by 0.1%, and no blocks will be signed and rewarded during jail time.
 <br>d.	Tombstoning: This is the worst possible scenario; you have staked your money to a node that has become compromised or misconfigured to an extent that it caused a fatal error. That validator key has been revoked and all capital is slashed by 5% and is final. Again, you always retain full control of your coin and may move it to any other node.
 Choosing a well-managed, enterprise-grade service provider will mitigate all the above. Please refer to https://www.crypto.org for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
@@ -339,7 +339,7 @@ Choosing a well-managed, enterprise-grade service provider will mitigate all the
     </div>
     <div class="container">
       <div class="footer-wrap-2">
-        <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.com Blockchain. We are not affiliated to Crypto.com, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum of 5.000 CRO to our node on or before March 31st 2021 will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements. In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. The slashing reimbursement described above is permanently lost when the user withdraws their stake.<br></div>
+        <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org Blockchain. We are not affiliated to Crypto.org, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum of 5.000 CRO to our node on or before March 31st 2021 will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements. In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. The slashing reimbursement described above is permanently lost when the user withdraws their stake.<br></div>
       </div>
     </div>
   </div>
