--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
       <div data-w-id="73954764-3167-a52e-869e-9555834dcd76" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid hero-content">
         <div class="grid-column">
-          <h1 class="display-heading">Carefree staking<br>Up to 20% APY<br>Cro’s Nest Validator</h1>
+          <h1 class="display-heading">Carefree staking<br>~20% APY<br>Cro’s Nest Validator</h1>
         </div>
         <div class="grid-content">
           <p class="paragraph-large">Peace of mind and pioneering excellence, enabling our users to nurture their savings, relieving them of the stress and cost of independent operating.<br></p>
