--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
           </div>
           <div class="accordion-item-content">
-            <p>Absolutely not. You’ve probably heard the adage: “not your keys, not your coins. Never has this been truer than today, with so many services and exchanges taking custody of your coin in exchange of their services and, sometimes, small interests. Truth is that all that coin is out of your control. If the company disappears, a wallet is hacked, a password lost, so is your coin. When delegating (staking) your capital to a validator node, you are “lending your staking power” to the node, which locks your coin (you may not use it to trade until you have disengaged your coin and waited a 21-day cool-down period). The coin never leaves your wallet and can never be acted upon other than by your own private keys.<br></p>
+            <p>Absolutely not. You’ve probably heard the adage: "not your keys, not your coins". Never has this been truer than today, with so many services and exchanges taking custody of your coin in exchange of their services and, sometimes, small interests. Truth is that all that coin is out of your control. If the company disappears, a wallet is hacked, a password lost, so is your coin. When delegating (staking) your capital to a validator node, you are “lending your staking power” to the node, which locks your coin (you may not use it to trade until you have disengaged your coin and waited a 21-day cool-down period). The coin never leaves your wallet and can never be acted upon other than by your own private keys.<br></p>
           </div>
         </div>  
         <div class="accordion-item">
