--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Choosing a well-managed, enterprise-grade service provider will mitigate all the
     </div>
     <div class="container">
       <div class="footer-wrap-2">
-        <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org Blockchain. We are not affiliated to Crypto.org, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum of 5.000 CRO to our node on or before March 31st 2021 will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements. In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. The slashing reimbursement described above is permanently lost when the user withdraws their stake.<br></div>
+        <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org Blockchain. We are not affiliated to Crypto.com, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum of 5.000 CRO to our node on or before March 31st 2021 will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements. In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. The slashing reimbursement described above is permanently lost when the user withdraws their stake.<br></div>
       </div>
     </div>
   </div>
