--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
             <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
           </div>
           <div class="accordion-item-content">
-            <p>In summary, the Crypto.org Blockchain is the peer-to-peer distributed ledger network on which the CRO coin exists and operates. To stake some amount of your own CRO means you lock your coin up and commit it to support an existing network validator node. These nodes are the building blocks of the network itself. In exchange for this lock-up, if the validator you have chosen is active and operational you will accrue rewards (roughly 20%APY minus commissions expected on a 100% operational node) in CRO.
+            <p>In summary, the Crypto.org Blockchain is the peer-to-peer distributed ledger network on which the CRO coin exists and operates. To stake some amount of your own CRO means you lock your coin up and commit it to support an existing network validator node. These nodes are the building blocks of the network itself. In exchange for this lock-up, if the validator you have chosen is active and operational you will accrue rewards (roughly 20% APY minus commissions expected on a 100% operational node) in CRO.
             Please refer to https://www.crypto.org for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
           </div>
         </div>
         <div class="accordion-item">
           <div id="q1" class="accordion-item-trigger">
-            <h4 class="accordion-heading"><strong>I could be earning up to 20% APY on my stake, but I must trust someone with my capital?</strong></h4>
+            <h4 class="accordion-heading"><strong>I could be earning around 20% APY on my stake, but I must trust someone with my capital?</strong></h4>
             <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
           </div>
           <div class="accordion-item-content">
