--- a/index.html
+++ b/index.html
@@ -239,7 +239,16 @@
           </div>
           <div class="accordion-item-content">
             <p>In summary, the Crypto.org Blockchain is the peer-to-peer distributed ledger network on which the CRO coin exists and operates. To stake some amount of your own CRO means you lock your coin up and commit it to support an existing network validator node. These nodes are the building blocks of the network itself. In exchange for this lock-up, if the validator you have chosen is active and operational you will accrue rewards (roughly 20% APY minus commissions expected on a 100% operational node) in CRO.
-            Please refer to https://www.crypto.org for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
+            Please refer to https://crypto.org/ for more information. All numbers and comments here are subject to change on or before the chain launches on March 25th, 2021.<br></p>
+          </div>
+        </div>
+          <div class="accordion-item">
+          <div id="q1" class="accordion-item-trigger">
+            <h4 class="accordion-heading"><strong>What is your commission?</strong></h4>
+            <div class="icon-2 accordion-icon">keyboard_arrow_down</div>
+          </div>
+          <div class="accordion-item-content">
+            <p>We have set a 10% fee, which means that you'll receive roughly 18% APY on your stake.<br></p>
           </div>
         </div>
         <div class="accordion-item">
